<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.lightdream</groupId>
    <artifactId>DatabaseManager</artifactId>
    <version>2.7</version>

    <distributionManagement>
        <repository>
            <id>lightdream-api</id>
            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
        </repository>
    </distributionManagement>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <id>no-drivers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-no-drivers-${project.version}</finalName>
                            <artifactSet>
                                <excludes>
                                    <!-- SQLite -->
                                    <exclude>org.xerial:sqlite-jdbc</exclude>

                                    <!-- MYSQL -->
                                    <exclude>mysql:mysql-connector-java</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                    <execution>
                        <id>sqlite-drivers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-sqlite-drivers-${project.version}</finalName>
                            <artifactSet>
                                <excludes>
                                    <!-- MYSQL -->
                                    <exclude>mysql:mysql-connector-java</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                    <execution>
                        <id>mysql-drivers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-mysql-drivers-${project.version}</finalName>
                            <artifactSet>
                                <excludes>
                                    <!-- SQLite -->
                                    <exclude>org.xerial:sqlite-jdbc</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                    <execution>
                        <id>all-drivers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-all-drivers-${project.version}</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>lightdream-repo</id>
            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
        </repository>
        <repository>
            <id>hikari</id>
            <url>https://mvnrepository.com/artifact/com.zaxxer/HikariCP</url>
        </repository>
        <repository>
            <id>mysql</id>
            <url>https://mvnrepository.com/artifact/mysql/mysql-connector-java</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <!-- Breaks compatibility with Java 1.8 -->
            <!--suppress MavenPackageUpdate -->
            <version>4.0.3</version>
        </dependency>

        <!-- Drivers -->
        <!-- SQLite -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.36.0.3</version>
            <scope>compile</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>com.zsoltfabok</groupId>
            <artifactId>sqlite-dialect</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.enigmabridge</groupId>
            <artifactId>hibernate4-sqlite-dialect</artifactId>
            <version>0.1.2</version>
            <scope>compile</scope>
        </dependency>
        -->

        <!-- MYSQL -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
            <scope>compile</scope>
        </dependency>


        <!-- Own Repo -->
        <dependency>
            <groupId>dev.lightdream</groupId>
            <artifactId>Logger</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>dev.lightdream</groupId>
            <artifactId>Lambda</artifactId>
            <version>LATEST</version>
        </dependency>

    </dependencies>

</project>